--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 body {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: 'Quicksand', sans-serif;
     font-size: 18px;
     line-height: 34px;
-    color: #777777;
-    background: url("../images/concrete_seamless.png");
+    color: #668DA3;
+    background: url("../images/blackwhite1.jpeg");
   }
   
   * {
@@ -18,12 +18,31 @@ body {
     margin: 0 auto;
     clear: both;
   }
-  
+  #links {
+    float: right;
+    font-display: center;
+    margin-right: 200px;
+    color:#A0DDFF;
+  }
+  #res,#gitH, #linkI {
+    font-weight: bolder;
+    font-family: 'Quicksand', sans-serif;
+    display: inline-block;
+    padding-left: 15px;
+    margin-left: 15px;
+    line-height: 18px;
+    color: #A0DDFF;
+    text-decoration: none;
+    border-left: 1px solid #efefef;
+   }
   h1,
   h2,
   h3,
   p {
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
+    float: right;
+    text-align: right;
+    
   }
   
   p:last-child {
@@ -32,19 +51,33 @@ body {
   
   h1,
   h2,
-  h3 {
-    font-family: Georgia, Times, "Times New Roman", serif;
+  h3,
+  #links  {
+    font-family: 'Quicksand', sans-serif;
     font-weight: 700;
-    color: #4aaaa5;
+    color: #A0DDFF;
   }
-  
+  /* #81A4CD */
   h1 {
-    padding-bottom: 20px;
-    font-size: 30px;
+   
+    font-family: 'Quicksand', sans-serif;
+    float: center;
+    /* padding-bottom: 20px; */
+    font-size: 60px;
     line-height: 49px;
-    border-bottom: 3px solid #dddddd;
+    border-bottom: 3px solid #282A2C; 
+    margin-right: 75px;
   }
-  
+  h4{
+    float: none;
+    font-family: 'Quicksand', sans-serif;
+    /* padding-bottom: 20px; */
+    font-size: 60px;
+    line-height: 49px;
+    border-bottom: 3px solid #282A2C; 
+    margin-left: 250px;
+    color: #A0DDFF;
+  }
   h2,
   h3 {
     font-size: 22px;
@@ -57,24 +90,10 @@ body {
     z-index: 99;
     width: 100%;
     margin: 0 0 30px;
-    overflow: auto;
+    /* overflow: auto;
     color: #ffffff;
     background: #ffffff;
-    border-bottom: 2px solid #cccccc;
-  }
-  
-  #logo {
-    float: left;
-    width: 250px;
-    height: 90px;
-    font-family: Georgia, Times, "Times New Roman", serif;
-    font-size: 30px;
-    font-weight: 700;
-    line-height: 90px;
-    color: #ffffff;
-    text-align: center;
-    text-decoration: none;
-    background: #4aaaa5;
+    border-bottom: 2px solid #cccccc; */
   }
   
   nav {
@@ -83,11 +102,12 @@ body {
   }
   
   nav a {
+    font-family: 'Quicksand', sans-serif;
     display: inline-block;
     padding-left: 15px;
     margin-left: 15px;
     line-height: 18px;
-    color: #999;
+    color: #A0DDFF;
     text-decoration: none;
     border-left: 1px solid #efefef;
   }
@@ -96,25 +116,12 @@ body {
     border-left: 0 none;
   }
   
-  /* footer */
-  
-  footer {
-    padding: 30px 0;
-    clear: both;
-    font-size: 12px;
-    color: #ffffff;
-    color: #cccccc;
-    text-align: center;
-    background: #666666;
-    border-top: 8px solid #4aaaa5;
-    height: 50px;
-  }
-  
+ 
   h3, h2 {
     padding-bottom: 20px;
     margin-bottom: 15px;
     line-height: 22px;
-    border-bottom: 2px solid #eeeeee;
+    border-bottom: 2px solid #B4BBC3;
   }
   
   /* main */
@@ -125,21 +132,34 @@ body {
   }
   
   .main-section {
-    float: left;
+    position: absolute; 
+    /* -webkit-transform: translateX(-50%);
+    transform: translateX(-50%); */
+    float: initial;
     width: 100%;
-    max-width: 960px;
+    max-width: 800px;
     padding: 30px;
     margin: 0 0 40px;
-    background: #ffffff;
-    border: 1px solid #dddddd;
+    background: #282A2C;
+    border-radius: 95px;
+    margin: 30px;
+    /* border: 1px solid black; */
+    opacity: .95;
   }
+ 
   
   /* portfolio page */
   
   .work {
+    /* display: inline; */
+    font-family: 'Quicksand', sans-serif;
+    display: inline-block;
+    padding-left: 15px;
+    margin-left: 15px;
+    line-height: 18px;
     position: relative;
-    float: left;
-    width: 274px;
+    /* float: left; */
+    width: 300px;
     margin: 20px 0 25px;
     overflow: auto;
   }
@@ -149,12 +169,13 @@ body {
   }
   
   .work img {
+    /* display: inline; */
     width: 100%;
     border: 0 none;
     opacity: 0.8;
   }
   
-  .work h3 {
+  /* .work h3 {
     position: absolute;
     bottom: 20px;
     width: 100%;
@@ -166,7 +187,7 @@ body {
     text-align: center;
     background: #4aaaa5;
     border-bottom: 0;
-  }
+  } */
   
   .auth-image {
     float: left;
@@ -174,9 +195,11 @@ body {
     height: auto;
     margin-top: 10px;
     margin-right: 25px;
+    border-radius: 200px;
+    /* opacity: 0.7; */
   }
   
-  /* contact page */
+  /* contact page
   
   #contact-form ul {
     margin-bottom: 20px;
@@ -185,8 +208,8 @@ body {
   #contact-form li {
     margin-bottom: 10px;
   }
-  
-  label,
+   */
+  /* label,
   input[type=text],
   input[type=email],
   textarea {
@@ -214,4 +237,4 @@ body {
     cursor: pointer;
     background: #4aaaa5;
     border: 0 none;
-  }
+  } */
