--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,8 +51,7 @@ body {
   
   h1,
   h2,
-  h3,
-  #links  {
+  h3 {
     font-family: 'Quicksand', sans-serif;
     font-weight: 700;
     color: #A0DDFF;
